horizontal scroll fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -1249,7 +1249,7 @@ table {
 }
 
 .link {
-  width: 30rem;
+  // width: 30rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
   align-self: center;
